# MultiTS-Eval

./: .gitignore  README.md  eval_musedfm.py  pyproject.toml  setup.py
examples/: __init__.py  check_datasets.py  run_musedfm.py
notebooks/: baseline_models_multieval_run_eval.ipynb  baseline_models_musedfm_run_eval.ipynb  baseline_models_museval_run_eval.ipynb  chronos_bolt_multieval_custom_eval.ipynb  chronos_bolt_multieval_run_eval.ipynb  chronos_bolt_musedfm_custom_eval.ipynb  chronos_bolt_musedfm_run_eval.ipynb  chronos_bolt_museval_custom_eval.ipynb
notebooks/results/baseline_models/categories/: arima_category_results.csv  exponential_smoothing_category_results.csv  historical_inertia_category_results.csv  linear_regression_category_results.csv  linear_regression_univariate_category_results.csv  linear_trend_category_results.csv  mean_category_results.csv
notebooks/results/baseline_models/datasets/: arima_dataset_results.csv  exponential_smoothing_dataset_results.csv  historical_inertia_dataset_results.csv  linear_regression_dataset_results.csv  linear_regression_univariate_dataset_results.csv  linear_trend_dataset_results.csv  mean_dataset_results.csv
notebooks/results/chronos_bolt/categories/: chronos_category_results.csv
notebooks/results/chronos_bolt/datasets/: chronos_dataset_results.csv
results/: chronos2_submission.json  metadata.json  submission_README.md
results/mean_submission/: mean_submission.json  metadata.json
src/examples/: __init__.py  check_datasets.py  compute_metric_musedfm.py  debug.py  eval_multieval.py  eval_musedfm.py  eval_museval.py  export_csvs.py  manage_window_counts.py  model_handling.py  run_multieval.py  run_multieval_parallel.py  run_musedfm.py  run_musedfm_parallel.py  run_museval.py  save_submission.py  utils.py
src/multieval/: __init__.py  chronos2_forecast.py  metrics.py
src/multieval/baselines/: __init__.py  arima_forecast.py  chronos_forecast.py  exponential_smoothing.py  historical_inertia.py  linear_regression.py  linear_trend.py  mean_forecast.py  timesfm_forecast.py  toto_forecast.py  utils.py
src/multieval/data/: __init__.py  benchmark.py  category.py  dataset.py  domain.py
src/multieval/data/special_loaders/: __init__.py
src/multieval/plotting/: __init__.py  plot_forecasts.py
src/musedfm/: __init__.py  metrics.py
src/musedfm/baselines/: __init__.py  arima_forecast.py  base_forecaster.py  chronos_forecast.py  exponential_smoothing.py  historical_inertia.py  linear_regression.py  linear_trend.py  mean_forecast.py  moirai_forecast.py  timesfm_forecast.py  toto_forecast.py  utils.py
src/musedfm/data/: __init__.py  benchmark.py  category.py  data_hierarchy.json  dataset.py  dataset_config.json  dataset_target_count.json  domain.py  iterated_datasets.json  window.py
src/musedfm/data/special_loaders/: __init__.py  ecl_special.py  kitti_special.py  open_aq_special.py
src/musedfm/examples/: __init__.py
src/musedfm/plotting/: __init__.py  plot_forecasts.py
src/museval/: __init__.py  metrics.py
src/museval/baselines/: __init__.py  arima_forecast.py  base_forecaster.py  exponential_smoothing.py  historical_inertia.py  linear_trend.py  mean_forecast.py  timesfm_forecast.py  toto_forecast.py
src/museval/data/: __init__.py  benchmark.py  category.py  data_hierarchy.json  dataset.py  dataset_config.json  dataset_target_count.json  domain.py  iterated_datasets.json  window.py
src/museval/examples/: __init__.py  check_datasets.py  compute_metric_musedfm.py  eval_museval.py  export_csvs.py  manage_window_counts.py  run_museval.py  run_museval_parallel.py  save_submission.py
src/museval/plotting/: __init__.py  plot_forecasts.py
(+2 files in other folders)
