[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthefy"
version = "1.0.0"
description = "Python client for the Synthefy API forecasting service"
readme = "README.md"
license = { text = "Apache License 2.0" }
authors = [{ name = "Synthefy", email = "contact@synthefy.com" }]
maintainers = [{ name = "Synthefy", email = "contact@synthefy.com" }]
keywords = ["forecasting", "api", "machine-learning", "time-series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "pyarrow>=10.0.0",
    "pydantic>=2.0.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.5.0",
    "pytest==8.3.2",
    "pytest-asyncio==0.25.0",
]
[project.urls]
Homepage = "https://synthefy.com"

[tool.hatch.build.targets.wheel]
packages = ["src/musedfm"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/docs", "README.md", "LICENSE", "CHANGELOG.md"]

[dependency-groups]
dev = ["build>=1.3.0", "twine>=6.1.0"]
