[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "museval"
version = "1.0.0"
description = "MUSEval: Multivariate Time Series Evaluation Dataset for Foundation Models"
readme = "README.md"
license = { text = "Apache License 2.0" }
authors = [{ name = "MUSEval Team", email = "caleb@synthefy.com" }]
maintainers = [{ name = "MUSEval Team", email = "caleb@synthefy.com" }]
keywords = ["forecasting", "time-series", "machine-learning", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=1.3.0",
    "pyarrow>=10.0.0",
    "pydantic>=2.0.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "pytest==8.3.2",
    "pytest-asyncio==0.25.0",
    "ipykernel>=6.30.1",
    "chronos-forecasting>=1.5.3",
    "huggingface-hub>=0.35.3",
    "transformers>=4.57.0",
    "datasets>=2.17.1,<2.18.dev0",
    "git-lfs>=1.6",
    "uni2ts",
    "timesfm==1.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv.sources]
uni2ts = { git = "https://github.com/SalesforceAIResearch/uni2ts.git" }
timesfm = { git = "https://github.com/google-research/timesfm.git" }

